[gd_scene load_steps=47 format=3 uid="uid://oc13h3au02ro"]

[ext_resource type="Script" path="res://Player_Controller/scripts/Player_Character/player_character.gd" id="1_h0t42"]
[ext_resource type="Script" path="res://Player_Controller/scripts/Player_Character/HUD.gd" id="2_tvwwj"]
[ext_resource type="Texture2D" uid="uid://cnk2ybqwk0gg" path="res://Player_Controller/HUD ASSETS/crosshair020.png" id="3_46uma"]
[ext_resource type="Texture2D" uid="uid://uidicgaojgdi" path="res://Player_Controller/HUD ASSETS/crosshair046.png" id="4_l32wb"]
[ext_resource type="Script" path="res://Player_Controller/scripts/Weapon_State_Machine/Weapon_State_Machine.gd" id="5_wuueu"]
[ext_resource type="Resource" uid="uid://yc1f2j7pl4vr" path="res://Player_Controller/scripts/Weapon_State_Machine/Weapon_Resources/blasterI.tres" id="6_tpjp5"]
[ext_resource type="Resource" uid="uid://bwrs8ensewkgc" path="res://Player_Controller/scripts/Weapon_State_Machine/Weapon_Resources/blasterL.tres" id="7_gf6gb"]
[ext_resource type="Resource" uid="uid://c1jg0ifn7yvve" path="res://Player_Controller/scripts/Weapon_State_Machine/Weapon_Resources/blasterN.tres" id="8_vhb8h"]
[ext_resource type="Resource" uid="uid://yaj22fmkfh8a" path="res://Player_Controller/scripts/Weapon_State_Machine/Weapon_Resources/blasterG.tres" id="9_06k0v"]
[ext_resource type="PackedScene" uid="uid://cb4a7oqdaebvu" path="res://Player_Controller/scripts/Weapon_State_Machine/Spray Paths/spray_1.tscn" id="10_hwk5r"]
[ext_resource type="PackedScene" uid="uid://bvlnghquw6pe2" path="res://Player_Controller/Weapon_Models/blasterN.glb" id="10_no2ca"]
[ext_resource type="PackedScene" uid="uid://c4j5i0syc1oj8" path="res://Player_Controller/Weapon_Models/blasterF.glb" id="11_0ds1w"]
[ext_resource type="PackedScene" uid="uid://cqrhqrsc0qi8i" path="res://Player_Controller/Spawnable_Objects/Weapons/blaster_A.tscn" id="11_cc4l7"]
[ext_resource type="PackedScene" uid="uid://tg4djk8lahjc" path="res://Example World/Models/Kenney Weapons/blasterI.glb" id="11_p0juy"]
[ext_resource type="PackedScene" uid="uid://c7sp7l3lsswwa" path="res://Player_Controller/Weapon_Models/blasterD.glb" id="12_876w4"]
[ext_resource type="Script" path="res://Player_Controller/scripts/Weapon_State_Machine/weapon_resource.gd" id="12_x2j4t"]
[ext_resource type="PackedScene" uid="uid://drns2kevx2ak2" path="res://Player_Controller/Weapon_Models/blasterA.glb" id="13_4xj2x"]
[ext_resource type="AnimationLibrary" uid="uid://uybino34n0sj" path="res://Player_Controller/weapon_animation.res" id="13_lmhsg"]
[ext_resource type="AudioStream" uid="uid://b1c7yhs8n0ycw" path="res://Music/shoot.mp3" id="19_2fcsx"]
[ext_resource type="AudioStream" uid="uid://b707udxhw45ev" path="res://Music/concrete-footsteps-6752.mp3" id="19_m71aq"]
[ext_resource type="AudioStream" uid="uid://brcrq571wxcbd" path="res://Music/JUMP.mp3" id="20_enb7k"]
[ext_resource type="AudioStream" uid="uid://bbjbwgqyf4y3a" path="res://Music/out of bullets.mp3" id="20_jdasj"]
[ext_resource type="AudioStream" uid="uid://b2dxijrldbl47" path="res://Music/running-14658.mp3" id="21_8ebu3"]
[ext_resource type="AudioStream" uid="uid://rrqtdqqjsa0v" path="res://Music/Reload.mp3" id="21_40ytq"]
[ext_resource type="Texture2D" uid="uid://lcygmjulvmdx" path="res://Assets/Images/SirkelSpin.png" id="22_dtk8t"]
[ext_resource type="Texture2D" uid="uid://bxf1pyh6prtxx" path="res://Assets/Images/Sirkel.png" id="23_055ni"]
[ext_resource type="Texture2D" uid="uid://v3wddjqqpc0q" path="res://Assets/Images/Pistol.png" id="24_joy0f"]
[ext_resource type="Texture2D" uid="uid://chenpf51h1fju" path="res://Assets/Images/AmmoSMG.png" id="25_w8xf1"]
[ext_resource type="Texture2D" uid="uid://cmoubip43c1gv" path="res://Assets/Images/AmmoAR.png" id="26_k0jhu"]
[ext_resource type="PackedScene" uid="uid://dbbfrmf6xrwhe" path="res://health_bar_3d_player.tscn" id="30_bjouy"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_cqlmy"]

[sub_resource type="Resource" id="Resource_uffw6"]
script = ExtResource("12_x2j4t")
Weapon_Name = "blasterA"
Pick_Up_Anim = "Global/blasterI Active"
Shoot_Anim = "Global/blasterI Shoot"
Reload_Anim = "Global/blasterI Reload"
Change_Anim = "Global/blasterI De-Activate"
Drop_Anim = "Global/blasterI Drop"
Out_Of_Ammo_Anim = "Global/blasterI OOA"
Melee_Anim = "Global/blasterI Melee"
Current_Ammo = 10
Reserve_Ammo = 20
Magazine = 5
Max_Ammo = 50
Damage = 4
Melee_Damage = 2.0
AutoFire = false
Fire_Range = 2000
Can_Be_Dropped = true
Weapon_Drop = ExtResource("11_cc4l7")
Type = 1
Projectile_Velocity = 0
Spray_Type = "Spray_Path"
Spray_Path = ExtResource("10_hwk5r")
Random_Spray_Noise = SubResource("FastNoiseLite_cqlmy")
Base_Magnetude = 0.1
x_Magnetude = 0.3
y_Magnetude = 0.3
z_Magnetude = 0.3

[sub_resource type="Animation" id="Animation_tvd50"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blasterI:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.148, 1.379, -0.398)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blasterL:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.117, 1.16, -0.512)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("blasterL:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -3.14159, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("blasterN:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.193, 1.255, -0.643)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("blasterN:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 3.14159, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ys4uk"]
_data = {
"RESET": SubResource("Animation_tvd50")
}

[sub_resource type="ViewportTexture" id="ViewportTexture_takav"]
viewport_path = NodePath("SubViewport")

[sub_resource type="BoxShape3D" id="BoxShape3D_tc1ik"]
size = Vector3(1.60191, 2.90608, 1.83518)

[sub_resource type="Animation" id="Animation_o67tj"]
resource_name = "CrouchToCrawl"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.55, 0), Vector3(2.08165e-12, 1, 2.08165e-12)]
}

[sub_resource type="Animation" id="Animation_thlc8"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2.08165e-12, 1, 2.08165e-12)]
}

[sub_resource type="Animation" id="Animation_7q3r4"]
resource_name = "StandingToCrawl"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.55, 0), Vector3(2.08165e-12, 1, 2.08165e-12)]
}

[sub_resource type="Animation" id="Animation_obfde"]
resource_name = "StandingToCrouch"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.55, 0), Vector3(2.08165e-12, 1.5, 2.08165e-12)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_amy5s"]
_data = {
"CrouchToCrawl": SubResource("Animation_o67tj"),
"RESET": SubResource("Animation_thlc8"),
"StandingToCrawl": SubResource("Animation_7q3r4"),
"StandingToCrouch": SubResource("Animation_obfde")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_73v4a"]
radius = 0.55642
height = 1.7

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_oxom1"]
radius = 0.556
height = 1.7

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_doflh"]
height = 1.0

[sub_resource type="SystemFont" id="SystemFont_pxgsh"]
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_7y1mg"]
font = SubResource("SystemFont_pxgsh")
font_size = 30

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
floor_max_angle = 0.872665
script = ExtResource("1_h0t42")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
scale = Vector2(3, 3)
transform = Transform2D(3, 0, 0, 3, 0, 0)
script = ExtResource("2_tvwwj")

[node name="Overlay" type="TextureRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="debug_hud" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/debug_hud"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/debug_hud/HBoxContainer"]
layout_mode = 2
text = "Current Weapon: "

[node name="CurrentWeapon" type="Label" parent="CanvasLayer/debug_hud/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/debug_hud"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/debug_hud/HBoxContainer2"]
layout_mode = 2
text = "Ammo:"

[node name="CurrentAmmo" type="Label" parent="CanvasLayer/debug_hud/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/debug_hud"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/debug_hud/HBoxContainer3"]
layout_mode = 2
text = "Weapon Stack:"

[node name="WeaponStack" type="Label" parent="CanvasLayer/debug_hud/HBoxContainer3"]
layout_mode = 2

[node name="Main_Sight" type="TextureRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_46uma")
stretch_mode = 3

[node name="Hit_Sight" type="TextureRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_l32wb")
stretch_mode = 3

[node name="Hit_Sight_Timer" type="Timer" parent="CanvasLayer/Hit_Sight"]
wait_time = 0.05
one_shot = true

[node name="Head" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 1, 2.08165e-12)

[node name="MainCamera" type="Camera3D" parent="Head"]
unique_name_in_owner = true
cull_mask = 524287
current = true

[node name="Weapons_Manager" type="Node3D" parent="Head/MainCamera" node_paths=PackedStringArray("Animation_Player")]
script = ExtResource("5_wuueu")
Animation_Player = NodePath("Weapons_Models/AnimationPlayer")
_weapon_resources = Array[ExtResource("12_x2j4t")]([ExtResource("7_gf6gb"), ExtResource("8_vhb8h"), ExtResource("6_tpjp5"), ExtResource("9_06k0v"), SubResource("Resource_uffw6")])
Start_Weapons = Array[String](["blasterN", "blasterI"])

[node name="Weapons_Models" type="Node3D" parent="Head/MainCamera/Weapons_Manager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.54919, 0)

[node name="blasterN" type="Node3D" parent="Head/MainCamera/Weapons_Manager/Weapons_Models"]
transform = Transform3D(-1, 0, 2.53518e-06, 0, 1, 0, -2.53518e-06, 0, -1, 0.193, 1.255, -0.643)
visible = false

[node name="blasterN" parent="Head/MainCamera/Weapons_Manager/Weapons_Models/blasterN" instance=ExtResource("10_no2ca")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.23872e-07, 0, 0.354231)

[node name="blasterI" type="Node3D" parent="Head/MainCamera/Weapons_Manager/Weapons_Models"]
transform = Transform3D(-1, 0, -2.53518e-06, 0, 1, 0, 2.53518e-06, 0, -1, -0.148, 1.379, -0.398)
visible = false

[node name="blasterI" parent="Head/MainCamera/Weapons_Manager/Weapons_Models/blasterI" instance=ExtResource("11_p0juy")]

[node name="blasterD" type="Node3D" parent="Head/MainCamera/Weapons_Manager/Weapons_Models"]
visible = false

[node name="blasterD" parent="Head/MainCamera/Weapons_Manager/Weapons_Models/blasterD" instance=ExtResource("12_876w4")]
transform = Transform3D(-1, 0, -2.53518e-06, 0, 1, 0, 2.53518e-06, 0, -1, -0.148, 1.379, -0.398)

[node name="blasterF" type="Node3D" parent="Head/MainCamera/Weapons_Manager/Weapons_Models"]
visible = false

[node name="blasterF" parent="Head/MainCamera/Weapons_Manager/Weapons_Models/blasterF" instance=ExtResource("11_0ds1w")]
transform = Transform3D(-1, 0, -2.53518e-06, 0, 1, 0, 2.53518e-06, 0, -1, 0.117, 1.16, -0.512)

[node name="blasterL" type="Node3D" parent="Head/MainCamera/Weapons_Manager/Weapons_Models"]
transform = Transform3D(-1, 0, -2.53518e-06, 0, 1, 0, 2.53518e-06, 0, -1, 0.117, 1.16, -0.512)
visible = false

[node name="blasterL" parent="Head/MainCamera/Weapons_Manager/Weapons_Models/blasterL" instance=ExtResource("13_4xj2x")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.3411e-06, 0, 0.527697)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Head/MainCamera/Weapons_Manager/Weapons_Models"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_ys4uk"),
"Global": ExtResource("13_lmhsg")
}

[node name="BulletPoint" type="Marker3D" parent="Head/MainCamera/Weapons_Manager"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.313352, -0.240567, -0.907474)
gizmo_extents = 0.21

[node name="Shoot" type="AudioStreamPlayer3D" parent="Head/MainCamera/Weapons_Manager"]
stream = ExtResource("19_2fcsx")
max_db = -15.571

[node name="OutOfBullets" type="AudioStreamPlayer3D" parent="Head/MainCamera/Weapons_Manager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.54919, 0)
stream = ExtResource("20_jdasj")

[node name="Reload" type="AudioStreamPlayer3D" parent="Head/MainCamera/Weapons_Manager"]
stream = ExtResource("21_40ytq")

[node name="Sprite3D" type="Sprite3D" parent="Head/MainCamera"]
transform = Transform3D(0.317588, 0, 0, 0, 0.371329, 0, 0, 0, 1, -2.08165e-12, 0.313871, -0.520418)
texture = SubResource("ViewportTexture_takav")

[node name="Pick_Up_Detection" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1.8311, 0, 0, 0, 1, 0, 0, 0)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pick_Up_Detection"]
transform = Transform3D(1, 0, 0, 0, 0.41426, 0, 0, 0, 1, 0, 0.389632, 0)
shape = SubResource("BoxShape3D_tc1ik")

[node name="Walking" type="AudioStreamPlayer3D" parent="Pick_Up_Detection"]
transform = Transform3D(1, 0, 0, 0, 0.54612, 0, 0, 0, 1, 0, 0, 0)
stream = ExtResource("19_m71aq")
volume_db = -10.0

[node name="Jump" type="AudioStreamPlayer3D" parent="Pick_Up_Detection"]
stream = ExtResource("20_enb7k")

[node name="Run" type="AudioStreamPlayer3D" parent="Pick_Up_Detection"]
stream = ExtResource("21_8ebu3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_amy5s")
}

[node name="StandingCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.999983, 0.00589918, 0, -0.00589918, 0.999983, 0, 1.67214, 0.000812744)
shape = SubResource("CapsuleShape3D_73v4a")

[node name="CrouchingCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(0.999971, -9.00207e-20, -0.00759211, 4.47872e-05, 0.999983, 0.00589901, 0.00759198, -0.00589918, 0.999954, 0, 1.32147, -0.000812744)
shape = SubResource("CapsuleShape3D_oxom1")

[node name="CrawlingCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.13033, 0.00206649)
shape = SubResource("CapsuleShape3D_doflh")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
offset = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(2, 2)
transform = Transform2D(2, 0, 0, 2, 2.08165e-12, 2.08165e-12)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer2"]
offset_left = 1270.0
offset_top = 612.5
offset_right = 1586.0
offset_bottom = 817.5
scale = Vector2(0.3, 0.3)
texture = ExtResource("24_joy0f")

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer2"]
offset_left = 1136.5
offset_top = 624.5
offset_right = 2390.5
offset_bottom = 1904.5
scale = Vector2(0.03, 0.03)
size_flags_horizontal = 8
texture = ExtResource("25_w8xf1")

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer2"]
offset_left = 1134.5
offset_top = 670.5
offset_right = 2388.5
offset_bottom = 1950.5
scale = Vector2(0.03, 0.03)
texture = ExtResource("26_k0jhu")

[node name="TextureRect4" type="TextureRect" parent="CanvasLayer2"]
offset_left = 638.5
offset_top = 742.5
offset_right = 808.5
offset_bottom = 885.5
size_flags_vertical = 8
texture = ExtResource("22_dtk8t")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer2/TextureRect4"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 0
offset_left = 52.0
offset_top = 39.0
offset_right = 279.0
offset_bottom = 265.0
scale = Vector2(0.3, 0.3)
texture = ExtResource("23_055ni")

[node name="Label" type="Label" parent="CanvasLayer2/TextureRect4"]
layout_mode = 0
offset_left = 77.5
offset_top = 53.0
offset_right = 93.5
offset_bottom = 98.0
text = "F"
label_settings = SubResource("LabelSettings_7y1mg")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true

[node name="HealthBar3DPlayer" parent="SubViewport" instance=ExtResource("30_bjouy")]

[connection signal="timeout" from="CanvasLayer/Hit_Sight/Hit_Sight_Timer" to="CanvasLayer" method="_on_hit_sight_timer_timeout"]
[connection signal="Add_Signal_To_HUD" from="Head/MainCamera/Weapons_Manager" to="CanvasLayer" method="_on_weapons_manager_add_signal_to_hud"]
[connection signal="Connect_Weapon_To_HUD" from="Head/MainCamera/Weapons_Manager" to="CanvasLayer" method="_on_weapons_manager_connect_weapon_to_hud"]
[connection signal="Hit_Successfull" from="Head/MainCamera/Weapons_Manager" to="CanvasLayer" method="_on_weapons_manager_hit_successfull"]
[connection signal="Update_Ammo" from="Head/MainCamera/Weapons_Manager" to="CanvasLayer" method="_on_weapons_manager_update_ammo"]
[connection signal="Update_WeaponStack" from="Head/MainCamera/Weapons_Manager" to="CanvasLayer" method="_on_weapons_manager_update_weapon_stack"]
[connection signal="Weapon_Changed" from="Head/MainCamera/Weapons_Manager" to="CanvasLayer" method="_on_weapons_manager_weapon_changed"]
[connection signal="body_entered" from="Pick_Up_Detection" to="Head/MainCamera/Weapons_Manager" method="_on_pick_up_detection_body_entered"]
